[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/mainmenu.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/VT323-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Game.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.698039, 0.286275, 0.356863, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.447059, 0.0901961, 0.14902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.117647, 0.2, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_top = 500.0
margin_right = 728.0
margin_bottom = 1288.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_right = 728.0
margin_bottom = 788.0
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_right = 728.0
margin_bottom = 60.0
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="Play Button" type="Button" parent="Background/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 200.0
margin_right = 528.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Play"
icon_align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 728.0
margin_bottom = 140.0
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="Game tutorial" type="Button" parent="Background/MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 200.0
margin_right = 528.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "How to"
icon_align = 1

[node name="MarginContainer3" type="MarginContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 728.0
margin_bottom = 220.0
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="Options" type="Button" parent="Background/MarginContainer/VBoxContainer/MarginContainer3"]
margin_left = 200.0
margin_right = 528.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Options"
icon_align = 1

[node name="MarginContainer4" type="MarginContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 728.0
margin_bottom = 300.0
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="Quit" type="Button" parent="Background/MarginContainer/VBoxContainer/MarginContainer4"]
margin_left = 200.0
margin_right = 528.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Quit"
icon_align = 1

[connection signal="button_up" from="Background/MarginContainer/VBoxContainer/MarginContainer/Play Button" to="." method="_on_Play_Button_button_up"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/MarginContainer2/Game tutorial" to="." method="_on_Game_tutorial_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/MarginContainer3/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/MarginContainer4/Quit" to="." method="_on_Quit_pressed"]
